Fix subtabs so they use much less space on narrower screens for #125

--- a/hawtio-web/src/main/webapp/css/site-base.css
+++ b/hawtio-web/src/main/webapp/css/site-base.css
@@ -21,6 +21,14 @@
   height: 100%;
 }
 
+/* sub tab tweaks */
+body div div ul.nav {
+  margin-bottom: 5px;
+  border-bottom: none;
+}
+
+
+
 /* Chart stuff */
 
 #charts {
